--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         <link href="css/styles.css" rel="stylesheet" />
         <link rel="shortcut icon" href="./assets/img/favicon/favicon-48.png" type="image/png">
         <link rel="icon" href="./assets/img/favicon/favicon-48.png" type="image/png">
+        <style>
+            .vizs{
+                width: 1215px;
+                border: 0;
+                height: 630px;
+                margin: 0 auto;
+                display: block;
+            }
+        </style>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -25,7 +34,7 @@
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">NYC COVID-19</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Timeline</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#timeline">Timeline</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Demographics</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Correlation</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Simulation</a></li>
@@ -43,22 +52,22 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#timeline">Find Out More</a>
                     </div>
                 </div>
             </div>
         </header>
         <!-- About section-->
-        <section class="page-section bg-primary" id="about">
+        <section class="page-section" id="timeline">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
-                        <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+                        <h2 class="text-center mt-0">Historical Overview</h2>
+
                     </div>
+
                 </div>
+                <iframe class="vizs" src="viz1.html"></iframe>
             </div>
         </section>
         <!-- Services section-->
