fixed link on iframe for github pages compatibility

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </div>
 
                 </div>
-                <iframe class="vizs" src="viz1.html"></iframe>
+                <iframe class="vizs" src="viz1"></iframe>
             </div>
         </section>
         <!-- Services section-->
