--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
+                        <p class="text-white-75 font-weight-light mb-5">An data-focused visualization and analysis of the Coronavirus pandemic in New York City and it's correlation to ethnicity.</p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#timeline">Find Out More</a>
                     </div>
                 </div>
