--- a/test.html
+++ b/test.html
@@ -28,6 +28,15 @@
             border-radius: 2px;
             pointer-events: none;
         }
+        .tooltip{
+            position: absolute;
+            font-family: "EB Garamond", serif;
+            z-index: 10;
+        }
+        .tooltip p{
+            padding: 0;
+            margin: 0 auto;
+        }
 
         #tooltip h4 {
             margin: 0;
