--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
             <div class="col-lg-8 text-center">
                 <h2 class="text-center mt-0">Demographics</h2>
                 <hr class="divider my-4"/>
+                <div>
+                    <img src="assets/img/viz2_a.png" style="
+                        margin-left: 90px;
+                        margin-bottom: 50px;
+                    ">
+                    <img src="assets/img/viz2_b.png" />
+                </div>
             </div>
 
         </div>
