--- a/test.html
+++ b/test.html
@@ -81,9 +81,10 @@
             left: 880px;
             top:760px;
         }
-        select option[value="total population"], select option[value="female"], select option[value="median age in years"], select option[value="education Index"], select option[value="per-capita income"], select option[value="public transportation"]{
+        select option[value="total population"],select option[value="average household size"], select option[value="female"], select option[value="median age in years"], select option[value="education Index"], select option[value="per-capita income"], select option[value="public transportation"]{
             color:#20378E
         }
+
         select option[value="asian"],select option[value="white"],select option[value="hispanic or latino"],select option[value="african american"]{
             color:#810000
         }
