--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             height: 1430px
         }
 
-        p.text,li {
+        p.text, li {
             font-family: "Merriweather Sans", sans-serif;
             width: 700px;
             margin: 0 auto;
@@ -232,23 +232,44 @@
         </p>
 
         <ul>
-            <li><b>Commuters using public transportation</b>. This is the number of workers who use public transportation to get to
-            work. This gives us insight into the utilization of public transportation. It is a factor that is tied to
-            the location, as this will be higher for places where use of public transportation is a must, such as the
-                heart of Manhattan.</li>
-            <li><b>Per-capita income</b>. This is the income per-capita in each ZCTA. Important to understand how rich an area is
-            on average.</li>
-            <li><b>Education Index</b>. Measures the
-            average education level of an area, higher means on average more people have a higher education.</li>
+            <li><b>Commuters using public transportation</b>. This is the number of workers who use public
+                transportation to get to
+                work. This gives us insight into the utilization of public transportation. It is a factor that is tied
+                to
+                the location, as this will be higher for places where use of public transportation is a must, such as
+                the
+                heart of Manhattan.
+            </li>
+            <li><b>Per-capita income</b>. This is the income per-capita in each ZCTA. Important to understand how rich
+                an area is
+                on average.
+            </li>
+            <li><b>Education Index</b>. Measures the average education level of an area, higher means on average more
+                people have a higher education.
+            </li>
             <li><b>Median Age (years)</b>. The median age, in years, of the ZCTA.</li>
-            <li><b>Ratio of female inhabitants</b>. The proportion of female inhabitants living in that area. We only show female
-            ratio because the male ratio is complementary.</li>
+            <li><b>Ratio of female inhabitants</b>. The proportion of female inhabitants living in that area. We only
+                show female
+                ratio because the male ratio is complementary.
+            </li>
             <li><b>Total population</b>. Total number of people that live in the ZCTA.</li>
             <li><b>White people (every thousand), African American people (every thousand), Hispanic or Latino (every
-            thousand), Asian people (every thousand)</b>. Number of people with that ethnicity every thousand living in that
-            area.</li>
+                thousand), Asian people (every thousand)</b>. Number of people with that ethnicity every thousand living
+                in that
+                area.
+            </li>
             <li><b>Number of positives</b>. Number of positive cases to COVID-19.</li>
         </ul>
+        <p class="text">
+            We can now freely explore the correlations between these factors and the number of cases. The first thing to
+            note is just by looking at the <b>total population</b>. There is no strong correlation between the size of
+            an area
+            and the number of cases. This means that if the overcrowding is an issue, it doesn't come from having a high
+            number of people living in the same area.
+        </p>
+        <p class="text">
+            We then want to focus on the education index
+        </p>
 
 
     </div>
@@ -273,10 +294,11 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 text-center">
-                <h2 class="mt-0">Let's Get In Touch!</h2>
+                <h2 class="mt-0">The Model</h2>
                 <hr class="divider my-4"/>
 
             </div>
+            <iframe class="vizs" src="viz4"></iframe>
         </div>
         <div class="row">
             <div class="col-lg-4 mr-auto text-center">
