--- a/index.html
+++ b/index.html
@@ -268,7 +268,12 @@
             number of people living in the same area.
         </p>
         <p class="text">
-            We then want to focus on the education index
+            We then want to focus on the <b>education index</b>, where we can more clearly see a correlation. Higher education
+            often leads to lower spread of Coronavirus. Here, it is important to refrain from speculations. Correlation
+            does not imply causation. We can only point out that this is what we see from the data we gathered, and make
+            some informed decisions as to why this might have happened. Higher education folks might be more aware to
+            the current events or it may simply be that higher education folks have higher income, providing them with
+            increased chance of being able to stay home when the pandemic hits. We explore the correlation between these two factors a bit more further down.
         </p>
 
 
@@ -279,10 +284,11 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 text-center">
-                <h2 class="mt-0">Let's Get In Touch!</h2>
+                <h2 class="mt-0">The Model</h2>
                 <hr class="divider my-4"/>
 
             </div>
+            <iframe style="width: 630px;" class="vizs" src="viz4"></iframe>
         </div>
         <div class="row">
 
@@ -294,11 +300,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 text-center">
-                <h2 class="mt-0">The Model</h2>
+                <h2 class="mt-0">The Links</h2>
                 <hr class="divider my-4"/>
 
             </div>
-            <iframe class="vizs" src="viz4"></iframe>
+            <p><a href="">The Notebook</a> </p>
+
         </div>
         <div class="row">
             <div class="col-lg-4 mr-auto text-center">
