--- a/index.html
+++ b/index.html
@@ -315,8 +315,11 @@
                 regression. The coefficients of the model allow us to variate the variables and see how they affect the
                 response variable, which is simply the number of positive cases. It is not of interest to have an
                 accurate prediction, but more so of being able to do inference.
-            </p>p>
-            <iframe style="width: 630px;" class="vizs" src="viz4"></iframe>
+            </p>
+            <div style="width: 100%;position: relative">
+            <iframe style="width: 630px;height: 260px" class="vizs" src="viz4"></iframe>
+            </div>
+            <div style="clear: both;float: none;"></div>
             <p class="text">
                 When moving the slides and pressing the "<i>Predict Positives</i>" button a prediction will be made. It shows
                 the predicted number of positive cases based on the input from the slides. It can now be seen that the
