--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
 
 
         </div>
+        <p class="ẗext">We showed that, clearly, the ethnicities are not the whole picture, there is much more going on, between ethnicities more than within ethnicities. The full understanding cannot come from just this analysis. The point is trying to make anyone reading this aware that the factors that played into the spread of Coronavirus were much more complicated and inter-related than a brief statistical overview of which ethnicities were most hit. Careful consideration of the data showed this.</p>
         <p class="text"><a href="https://nbviewer.jupyter.org/github/apra/nyc.covid19/blob/master/main.ipynb">The
             Notebook</a></p>
         <p class="text"><a href="https://github.com/apra/nyc.covid19/datasets">The cleaned datasets</a></p>
