conclusion to the discussion

--- a/index.html
+++ b/index.html
@@ -321,9 +321,9 @@
             </div>
             <div style="clear: both;float: none;"></div>
             <p class="text">
-                When moving the slides and pressing the "<i>Predict Positives</i>" button a prediction will be made. It shows
-                the predicted number of positive cases based on the input from the slides. It can now be seen that the
-                prediction decreases when moving the "<i>Education index</i>" or "<i>Precentage of females</i>" up. While it decreases
+                When <b>moving</b> the sliders and pressing the "<b>Predict Positives</b>" button a prediction will be made. It shows
+                the <b>predicted number of positive cases</b> based on the input from the slides. It can now be seen that the
+                prediction <b>decreases</b> when moving the "<i>Education index</i>" or "<i>Precentage of females</i>" up. While it <b>increases</b>
                 when sliding "<i>Median Age</i>" or "<i>Average household size</i>" up. This corresponds with the findings earlier.
                 The reason "<i>Income</i>" is not shown in the sliders, is that "Education index" is so highly correlated with
                 it, that it fully explains the information of "Income", so likewise an increase in "Income" would
@@ -346,16 +346,16 @@
 
         </div>
         <p class="ẗext">We showed that, clearly, the ethnicities are not the whole picture, there is much more going on, between ethnicities more than within ethnicities. The full understanding cannot come from just this analysis. The point is trying to make anyone reading this aware that the factors that played into the spread of Coronavirus were much more complicated and inter-related than a brief statistical overview of which ethnicities were most hit. Careful consideration of the data showed this.</p>
-        <p class="text"><a href="https://nbviewer.jupyter.org/github/apra/nyc.covid19/blob/master/main.ipynb">The
+        <p class="text"><a target="_blank" href="https://nbviewer.jupyter.org/github/apra/nyc.covid19/blob/master/main.ipynb">The
             Notebook</a></p>
-        <p class="text"><a href="https://github.com/apra/nyc.covid19/datasets">The cleaned datasets</a></p>
+        <p class="text"><a target="_blank" href="https://github.com/apra/nyc.covid19/tree/master/datasets">The cleaned datasets</a></p>
 
     </div>
 </section>
 <!-- Footer-->
 <footer class="bg-light py-5">
     <div class="container">
-        <div class="small text-center text-muted">Copyright © 2020 - Project Visualization</div>
+        <div class="small text-center text-muted">Copyright © 2020 - Project Visualization. By Steinn Orri Erlendsson, Christian Dandanell Glissov and Samuele Papa </div>
     </div>
 </footer>
 <!-- Bootstrap core JS-->
