the beginning of the boldening

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 When <b>moving</b> the sliders and pressing the "<b>Predict Positives</b>" button a prediction will be made. It shows
                 the <b>predicted number of positive cases</b> based on the input from the slides. It can now be seen that the
                 prediction <b>decreases</b> when moving the "<i>Education index</i>" or "<i>Precentage of females</i>" up. While it <b>increases</b>
-                when sliding "<i>Median Age</i>" or "<i>Average household size</i>" up. This corresponds with the findings earlier.
+                when sliding "<i>Median Age</i>" or "<i>Average household size</i>" up. This corresponds with the findings earlier, higher education leads to less cases, while bigger average house size leads to more cases.
                 The reason "<i>Income</i>" is not shown in the sliders, is that "Education index" is so highly correlated with
                 it, that it fully explains the information of "Income", so likewise an increase in "Income" would
                 decrease the prediction output. So to have a higher chance of contracting COVID-19, be a male with low
