the continuation of the boldening 3

--- a/index.html
+++ b/index.html
@@ -424,7 +424,8 @@
             ethnicities were most hit. Careful consideration of the data showed this.</p>
         <p class="text"><a target="_blank"
                            href="https://nbviewer.jupyter.org/github/apra/nyc.covid19/blob/master/main.ipynb">The
-            Notebook</a></p>
+            Notebook</a> (<a target="_blank"
+                           href="https://github.com/apra/nyc.covid19/blob/master/main.ipynb">Github Version</a>)</p>
         <p class="text"><a target="_blank" href="https://github.com/apra/nyc.covid19/tree/master/datasets">The cleaned
             datasets</a></p>
 
