--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
             <div class="col-lg-8 align-self-baseline">
                 <p class="text-white-75 font-weight-light mb-5">A data-focused visualization and analysis of the
-                    Coronavirus pandemic in New York City and it's correlation to ethnicity.</p>
+                    Coronavirus pandemic in New York City and its correlation to ethnicity.</p>
                 <a class="btn btn-primary btn-xl js-scroll-trigger" href="#timeline">Find Out More</a>
             </div>
         </div>
