the boldening 6, the one where I have an international keyboard and there was a weird t instead of a normal t

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                 <hr class="divider my-4"/>
 
             </div>
-            <p class="ẗext">We showed that, clearly, the ethnicities are not the whole picture, there is much more going
+            <p class="text">We showed that, clearly, the ethnicities are not the whole picture, there is much more going
                 on,
                 between ethnicities more than within ethnicities. The full understanding cannot come from just this
                 analysis. The point is trying to make anyone reading this aware that the factors that played into the
