--- a/index.html
+++ b/index.html
@@ -441,8 +441,8 @@
 <!-- Footer-->
 <footer class="bg-light py-5">
     <div class="container">
-        <div class="small text-center text-muted">Copyright © 2020 - Project Visualization. By Steinn Orri Erlendsson,
-            Christian Dandanell Glissov and Samuele Papa
+        <div class="small text-center text-muted">Copyright © 2020 - Project Visualization. By Samuele Papa,
+            Christian Dandanell Glissov and Steinn Orri Erlendsson
         </div>
     </div>
 </footer>
